fix(chat-layout): layout bugfixes

--- a/public/styles.css
+++ b/public/styles.css
@@ -659,6 +659,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .-mt-3 {
   margin-top: -0.75rem;
 }
@@ -783,6 +788,22 @@ video {
   height: 100vh;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
+.h-\[calc\(0\.25rem_\*_12\)\] {
+  height: calc(0.25rem * 12);
+}
+
+.h-\[calc\(100\%\)\] {
+  height: calc(100%);
+}
+
+.h-\[calc\(100vh_-_11\.5rem\)\] {
+  height: calc(100vh - 11.5rem);
+}
+
 .max-h-8 {
   max-height: 2rem;
 }
@@ -801,6 +822,10 @@ video {
 
 .max-h-full {
   max-height: 100%;
+}
+
+.max-h-\[2rem\] {
+  max-height: 2rem;
 }
 
 .min-h-\[\.75rem\] {
@@ -837,6 +862,18 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-\[calc\(0\.25rem_\*_14\)\] {
+  min-height: calc(0.25rem * 14);
+}
+
+.min-h-\[calc\(0\.25rem_\*_12\)\] {
+  min-height: calc(0.25rem * 12);
+}
+
+.min-h-\[2rem\] {
+  min-height: 2rem;
 }
 
 .w-1 {
@@ -961,6 +998,10 @@ video {
 
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-\[2rem\] {
+  max-width: 2rem;
 }
 
 .flex-1 {
@@ -1095,6 +1136,14 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-\[calc\(3\*0\.25rem_\+_1px\)\] {
+  gap: calc(3 * 0.25rem + 1px);
+}
+
+.gap-\[calc\(3\*0\.25rem_-_1px\)\] {
+  gap: calc(3 * 0.25rem - 1px);
 }
 
 .gap-x-4 {
@@ -1413,6 +1462,11 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-2 {
@@ -1989,6 +2043,34 @@ video {
 
   .sm\:h-full {
     height: 100%;
+  }
+
+  .sm\:h-\[calc\(100vh_-_6rem\)\] {
+    height: calc(100vh - 6rem);
+  }
+
+  .sm\:h-\[calc\(100vh_-_7rem\)\] {
+    height: calc(100vh - 7rem);
+  }
+
+  .sm\:h-\[calc\(100vh_-_7\.25rem\)\] {
+    height: calc(100vh - 7.25rem);
+  }
+
+  .sm\:h-\[calc\(100vh_-_6\.72rem\)\] {
+    height: calc(100vh - 6.72rem);
+  }
+
+  .sm\:h-\[calc\(100vh_-_6\.75rem\)\] {
+    height: calc(100vh - 6.75rem);
+  }
+
+  .sm\:h-\[calc\(100vh_-_6\.6rem\)\] {
+    height: calc(100vh - 6.6rem);
+  }
+
+  .sm\:h-\[calc\(100vh_-_6\.5rem\)\] {
+    height: calc(100vh - 6.5rem);
   }
 
   .sm\:w-16 {
